[gd_scene load_steps=15 format=2]

[ext_resource path="res://Scene/Networks/XionLeak/XionLeakNetwork.gd" type="Script" id=1]
[ext_resource path="res://Assets/Fonts/GameFont.tres" type="DynamicFontData" id=4]

[sub_resource type="StreamTexture" id=2]
flags = 4
load_path = "res://.import/ItchIo.png-58ebd2e43b215b945138e67e79a85772.stex"

[sub_resource type="StyleBoxFlat" id=3]
bg_color = Color( 0.607843, 0, 0, 0.784314 )
corner_radius_top_left = 100
corner_radius_top_right = 100
corner_radius_bottom_right = 100
corner_radius_bottom_left = 100

[sub_resource type="StyleBoxFlat" id=4]
bg_color = Color( 1, 1, 1, 0.784314 )
corner_radius_top_left = 50
corner_radius_top_right = 50
corner_radius_bottom_right = 50
corner_radius_bottom_left = 50

[sub_resource type="DynamicFont" id=5]
size = 32
font_data = ExtResource( 4 )

[sub_resource type="RectangleShape2D" id=6]
extents = Vector2( 260, 32 )

[sub_resource type="StreamTexture" id=7]
flags = 4
load_path = "res://.import/Twitter.png-49ec27b1215a87fdbe164aef2f02a0d2.stex"

[sub_resource type="StyleBoxFlat" id=8]
bg_color = Color( 0, 0.196078, 0.607843, 0.784314 )
corner_radius_top_left = 100
corner_radius_top_right = 100
corner_radius_bottom_right = 100
corner_radius_bottom_left = 100
shadow_color = Color( 0, 1, 0, 0.6 )

[sub_resource type="StyleBoxFlat" id=9]
bg_color = Color( 1, 1, 1, 0.784314 )
corner_radius_top_left = 50
corner_radius_top_right = 50
corner_radius_bottom_right = 50
corner_radius_bottom_left = 50

[sub_resource type="DynamicFont" id=10]
size = 32
font_data = ExtResource( 4 )

[sub_resource type="RectangleShape2D" id=11]
extents = Vector2( 324, 36 )

[sub_resource type="Animation" id=12]
resource_name = "itchio_appear"
length = 2.0
tracks/0/type = "value"
tracks/0/path = NodePath("ItchIO/ItchIOPanel:rect_scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 1.3, 1.3 ), Vector2( 1, 1 ) ]
}
tracks/1/type = "method"
tracks/1/path = NodePath(".")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 2 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [ "itchio" ],
"method": "call_website"
} ]
}

[sub_resource type="Animation" id=13]
resource_name = "twitter_appear"
length = 2.0
tracks/0/type = "value"
tracks/0/path = NodePath("Twitter/TwitterPanel:rect_scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 1.3, 1.3 ), Vector2( 1, 1 ) ]
}
tracks/1/type = "method"
tracks/1/path = NodePath(".")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 2 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [ "twitter" ],
"method": "call_website"
} ]
}

[node name="XionLeakNetwork" type="Node2D"]
script = ExtResource( 1 )
twitter_link = "https://twitter.com/XionLeak"

[node name="ItchIO" type="Sprite" parent="."]
visible = false
position = Vector2( 0, -88 )
texture = SubResource( 2 )

[node name="ItchIOPanel" type="Panel" parent="ItchIO"]
show_behind_parent = true
anchor_left = 3.875
anchor_top = 0.5
anchor_right = 3.875
anchor_bottom = 0.5
margin_left = -312.0
margin_top = -96.0
margin_right = 264.0
margin_bottom = 32.0
rect_scale = Vector2( 1.3, 1.3 )
rect_pivot_offset = Vector2( 268, 48 )
mouse_filter = 2
custom_styles/panel = SubResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Panel" type="Panel" parent="ItchIO"]
modulate = Color( 1, 1, 1, 0.784314 )
self_modulate = Color( 1, 1, 1, 0.627451 )
anchor_left = 4.629
anchor_top = 0.5
anchor_right = 4.629
anchor_bottom = 0.5
margin_left = -256.256
margin_top = -64.0
margin_right = 175.744
mouse_filter = 2
custom_styles/panel = SubResource( 4 )
__meta__ = {
"_edit_use_anchors_": false,
"_editor_description_": ""
}

[node name="Label" type="Label" parent="ItchIO"]
margin_left = 40.0
margin_top = -32.0
margin_right = 480.0
margin_bottom = 32.0
custom_fonts/font = SubResource( 5 )
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false,
"_editor_description_": ""
}

[node name="itcharea" type="Area2D" parent="ItchIO"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="ItchIO/itcharea"]
position = Vector2( 220, 0 )
shape = SubResource( 6 )
disabled = true

[node name="Twitter" type="Sprite" parent="."]
texture = SubResource( 7 )

[node name="TwitterPanel" type="Panel" parent="Twitter"]
show_behind_parent = true
anchor_left = 3.875
anchor_top = 0.5
anchor_right = 3.875
anchor_bottom = 0.5
margin_left = -312.25
margin_top = -103.5
margin_right = 399.75
margin_bottom = 40.5
rect_scale = Vector2( 1.3, 1.3 )
rect_pivot_offset = Vector2( 356, 72 )
mouse_filter = 2
custom_styles/panel = SubResource( 8 )
__meta__ = {
"_edit_use_anchors_": false,
"_editor_description_": ""
}

[node name="Panel" type="Panel" parent="Twitter"]
modulate = Color( 1, 1, 1, 0.784314 )
self_modulate = Color( 1, 1, 1, 0.627451 )
anchor_left = 4.629
anchor_top = 0.5
anchor_right = 4.629
anchor_bottom = 0.5
margin_left = -254.998
margin_top = -55.5
margin_right = 313.002
margin_bottom = 8.5
mouse_filter = 2
custom_styles/panel = SubResource( 9 )
__meta__ = {
"_edit_use_anchors_": false,
"_editor_description_": ""
}

[node name="Label" type="Label" parent="Twitter"]
margin_left = 40.0
margin_top = -24.0
margin_right = 592.0
margin_bottom = 40.0
custom_fonts/font = SubResource( 10 )
text = "https://twitter.com/XionLeak"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false,
"_editor_description_": ""
}

[node name="twitterarea" type="Area2D" parent="Twitter"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Twitter/twitterarea"]
position = Vector2( 284, 4 )
shape = SubResource( 11 )
__meta__ = {
"_editor_description_": ""
}

[node name="ItchIOPlayer" type="AnimationPlayer" parent="."]
anims/itchio_appear = SubResource( 12 )

[node name="TwitterPlayer" type="AnimationPlayer" parent="."]
anims/twitter_appear = SubResource( 13 )
